risolto overflow elenco playlist e bug query 600px

--- a/css/style.css
+++ b/css/style.css
@@ -88,11 +88,11 @@
 
         header {
             background-color: var(--black);
-            /* padding: 0 1rem; */
-            overflow: hidden;
             display: flex;
             flex-flow: column nowrap;
             justify-content: space-between;
+            padding-right: 1rem;
+            overflow: hidden;
         }
 
         header .button-header {
@@ -144,7 +144,6 @@
 
         .header-top {
             min-height: 350px;
-            overflow: hidden;
             display: flex;
             flex-flow: column nowrap;
             justify-content: flex-start;
@@ -159,7 +158,7 @@
             padding: 1rem 0 0 1rem;
         }
 
-        .header-top .logo img {
+        .header-top .logo-big {
             height: 70%;
         }
 
@@ -212,26 +211,26 @@
                 background-color: var(--white);
             }
 
-            .header-top .playlist ul {
+            .header-top .playlist-list {
+                padding-left: 1rem;
+                overflow-y: auto;
+            }
+
+            .header-top .playlist-list ul {
                 list-style: none;
             }
 
-            .header-top .playlist li {
+            .header-top .playlist-list li {
                 margin: 1rem 0;
             }
 
-            .header-top .playlist a {
+            .header-top .playlist-list a {
                 text-decoration: none;
                 color: var(--lightgrey);
             }
 
-            .header-top .playlist a:hover {
+            .header-top .playlist-list a:hover {
                 color: var(--white);
-            }
-
-            /* NON FUNZIONA!!!! RIVEDERE */
-            .header-top .playlist-list {
-                overflow-y: auto;
             }
 
         /* Download app */
@@ -408,6 +407,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            overflow: hidden;
         }
 
         footer .icon-button-small {
@@ -620,15 +620,19 @@
 
     /* HEADER */
 
+    header {
+        padding-right: 0;
+    }
+
     .header-top {
-        min-height: 200px;
+        min-height: 0;
         align-items: center;
         flex-grow: 0;
     }
 
     .header-top .logo {
-        height: auto;
         padding: 1rem 0 0 0;
+        height: auto;
     }
 
     .header-top .logo .logo-big {
@@ -636,8 +640,16 @@
     }
 
     .header-top .logo .logo-small {
-        width: 100%;
         display: inline-block;
+        height: 40px;
+    }
+
+    .header-top .menu-sections .button-header {
+        padding-left: 0;
+    }
+
+    header .button-header-selected {
+        border-left: none;
     }
 
     header .button-header span {
@@ -648,6 +660,16 @@
         display: none;
     }
 
+    header .playlist-list {
+        display: none;
+    }
+
+    .header-bottom {
+        display: flex;
+        flex-flow: column nowrap;
+        align-items: center;
+    }
+    
     header hr {
         display: none;
     }
